# WEB-CHATROOM

./: .gitignore  README.md  test_websocket.html
BACKEND/: CMakeLists.txt  README.md  build.sh  chatroom.db
BACKEND/include/: chat_server.h  chat_server_new.h  chat_server_old.h  database.h
BACKEND/src/: chat_server.cpp  chat_server_new.cpp  chat_server_old.cpp  chat_server_simple.cpp  database.cpp  database_old.cpp  main.cpp
FRONTEND/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
FRONTEND/src/: App.vue
FRONTEND/src/assets/: main.css
FRONTEND/src/router/: index.ts
FRONTEND/src/stores/: auth.ts  chat.ts
FRONTEND/src/utils/: websocket.ts
FRONTEND/src/views/: ChatView.vue  LoginView.vue
